--- a/farm.css
+++ b/farm.css
@@ -13,14 +13,10 @@ ul {color:white;
 table {font-size: 25px;
 	color:white;
 	border:2px solid lightgreen;}
-td {border-width: 1px;
-	border-style: solid;
-	border-color: lightgreen;
-	vertical-align: center;}
-th {border-width: 1px;
-	border-style: solid;
-	border-color: lightgreen;}
-.red {color:red;}
+td,th {font-size: 25px;
+	color:white;
+	border:1px solid lightgreen;}
 div {background-color: green;}
 .noborder {border-style: none;
 		font-size: 20px;}
+h5, h4 {color:white;}
