--- a/htmlexercise01.css
+++ b/htmlexercise01.css
@@ -21,10 +21,14 @@ body {
     background-color: yellow;
     text-align: center;
     width: 10%;
-    height: 10%;
+    height: 0%;
     border-radius: 10px;
-    display: none;
+    opacity: 0%;
+    transition: 1s;
+    box-shadow: -15px 10px 5px #00000070;
 }
 .half:hover .color {
-    display: table-cell;
+    opacity: 100%;
+    transition: 1s;
+    height: 10%;
 }
