--- a/htmlexercise02.css
+++ b/htmlexercise02.css
@@ -20,9 +20,16 @@ html, body, .full {
     background-color: #a9a9a9b8;
     opacity: 0%;
 }
+.text {
+    opacity: 0%;
+}
 
-.thecells:hover .absolute {
+.absolute:hover {
     opacity: 75%;
+    transition: 1s;
+}
+.absolute:hover .text {
+    opacity: 100%;
     transition: 1s;
 }
 
