--- a/aastores.css
+++ b/aastores.css
@@ -31,3 +31,51 @@ body {
     justify-content: center;
     gap: 30px;
 }
+.no-style-link {
+    text-decoration: none;
+}
+.heading-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+}
+.heading-background-image img, .heading-background-image {
+    height: 300px;
+}
+
+element.style {
+}
+.heading-text-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #00000087;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heading-text {
+    color: white;
+    font-family: 'Rubik Moonrocks', cursive;
+    font-size: 60px;
+}
+.heading-wrapper {
+    position: relative;
+}
+.content-container {
+    display: flex;
+    width: 100%;
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 30px;
+}
+.content {
+    padding: 10px 20px;
+    width: 400px;
+    background-color: #e1e1e1;
+    box-shadow: 5px 10px 10px #abaaaa;
+    font-family: 'Open Sans', sans-serif;
+}
