--- a/fun/01/corona.css
+++ b/fun/01/corona.css
@@ -10,6 +10,7 @@
 .corona-wrapper {
     flex-basis: 0;
     flex-grow: 1;
+    transition: 1s;
 }
 html, body, .corona-container {
     height: 100%;
