--- a/fun/03/pegSolitaire.css
+++ b/fun/03/pegSolitaire.css
@@ -16,6 +16,7 @@ body, html, .all {
      display: flex;
      flex-direction: column;
      gap: 15px;
+     justify-content: center;
 }
 .line {
     display: flex;
