I can drag but not drop):

--- a/fun/03/pegSolitaire.css
+++ b/fun/03/pegSolitaire.css
@@ -26,5 +26,9 @@ body, html, .all {
 .peg {
     width: 65px;
     height: 65px;
-    background-image: url(peg.png)
+    background-image: url(peg2.png)
+}
+.empty-slot {
+    width: 65px;
+    height: 65px;
 }
