--- a/fun/03/pegSolitaire.css
+++ b/fun/03/pegSolitaire.css
@@ -14,25 +14,19 @@ body, html, .all {
     background-image: url(board.jpg);
     background-size: contain;
     background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     width: 100%;
     max-width: 470px;
     max-height: 723px;
     padding: 15%;
-}
-.line {
-    display: flex;
-    justify-content: center;
 }
 .peg {
 }
 .empty-slot {
 }
 .slot {
-    flex-grow: 1;
-    flex-basis: 0;
 }
 .slot img {
     max-width: 100%;
