--- a/fun/03/pegSolitaire.css
+++ b/fun/03/pegSolitaire.css
@@ -9,6 +9,7 @@ body, html, .all {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 .board {
     background-image: url(board.jpg);
@@ -30,4 +31,23 @@ body, html, .all {
 }
 .slot img {
     max-width: 100%;
+}
+#gameOver {
+    background-color: white;
+    border-radius: 15px;
+    height: 50%;
+    width: 50%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    box-shadow: 10px 10px 10px #0000008a;
+    font-family: 'Josefin Sans', sans-serif;
+    flex-direction: column;
+}
+.pegs-left {
+    font-family: 'Josefin Sans', sans-serif;
+}
+.enter {
+    height: 15px;
 }
