--- a/fun/05/figgerits.css
+++ b/fun/05/figgerits.css
@@ -4,17 +4,27 @@ html, body {
     height: 100%;
     font-family: 'Open Sans', sans-serif;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 97%;
     width: 100%;
     max-width: 500px;
     margin: auto;
+    background-color: #f1fcff;
+    border-radius: 10px;
 }
 
 .title-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
