--- a/fun/08/english.css
+++ b/fun/08/english.css
@@ -62,3 +62,13 @@ html, body, .all {
     font-size: 27px;
     font-weight: 550;
 }
+.counter-container {
+    width: 300px;
+    height: 30px;
+    display: flex;
+    background-color: #e1e1e1;
+}
+.counter-cell {
+    height: 100%;
+    width: 10%;
+}
