Added image instead of emoji

--- a/fun/09/gps.css
+++ b/fun/09/gps.css
@@ -22,7 +22,11 @@ html, body, .all {
     border-radius: 20px;
     text-align: center;
 }
-#arrow {
-    font-size: 150px;
+#arrow.container {
     rotate: 90deg;
+    padding: 20px;
+}
+#arrow {
+    width: 200px;
+    height: 200px;
 }
