--- a/fun/11/tic-tac-toe.css
+++ b/fun/11/tic-tac-toe.css
@@ -9,12 +9,16 @@ html, body, .all {
     align-items: center;
     font-family: 'Assistant', sans-serif;
 }
+.grid-container {
+    width: 80%;
+    max-width: 500px;
+    aspect-ratio: 1 / 1;
+}
 .grid {
-    width: 500px;
-    height: 500px;
+    height: 100%;
     background-color: black;
     display: grid;
-    grid-template-columns: 160px 160px 160px;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
 }
 .cell {
@@ -28,4 +32,26 @@ html, body, .all {
 }
 .o {
     background-image: url("o.jpg");
+}
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000060;
+    display: none;
+}
+.modal-content {
+    background-color: #f8f8f8;
+    box-shadow: 0 4px 23px 0 #000000c8;
+    width: 80%;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
