Added thinking modal
So player can't click twice in a row too fast

--- a/fun/11/tic-tac-toe.css
+++ b/fun/11/tic-tac-toe.css
@@ -54,7 +54,7 @@ html, body, .all {
     align-items: center;
     margin: auto;
 }
-.modal-text {
+#won-text {
     font-family: 'Lobster', cursive;
     font-size: 40px;
 }
