--- a/fun/11/tic-tac-toe.css
+++ b/fun/11/tic-tac-toe.css
@@ -39,7 +39,7 @@ html, body, .all {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #00000060;
+    background-color: #00000040;
     display: none;
 }
 .modal-content {
@@ -52,7 +52,8 @@ html, body, .all {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 20px auto;
+    height: 100px;
 }
 #won-text {
     font-family: 'Lobster', cursive;
