Works on mobile
Co-Authored-By: Zvika Ben-Haim <zvikabh@users.noreply.github.com>

--- a/fun/00/table-of-contents.css
+++ b/fun/00/table-of-contents.css
@@ -30,7 +30,8 @@ a {
     padding: 15px;
     background-color: #9d9dff;
     border-radius: 20px;
-    width: 500px;
+    width: 80%;
+    cursor: pointer;
 }
 .name {
     font-size: 25px;
