--- a/fun/13/connections.css
+++ b/fun/13/connections.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: #9bc4ff;
+    font-size: 18px;
 }
 
 #all {
@@ -50,6 +51,10 @@ body {
     align-items: center;
     box-shadow: 3px 3px 4px 0px #00000075;
     justify-content: center;
+}
+
+.item-text {
+    cursor: default;
 }
 
 .solved-row {
