Skeleton of working js code.
TODO:
- hints
- count number of mistakes and lose if too many
- nicer alerts
- animation

--- a/fun/13/connections.css
+++ b/fun/13/connections.css
@@ -44,6 +44,8 @@ body {
 .grid-item {
     border-radius: 12px;
     background-color: #9bc4ff;
+    border: 5px solid #9bc4ff;
+    box-sizing: border-box;
     width: 100%;
     height: 75px;
     display: flex;
@@ -51,13 +53,21 @@ body {
     align-items: center;
     box-shadow: 3px 3px 4px 0px #00000075;
     justify-content: center;
-}
-
-.item-text {
-    cursor: default;
+    transition: background 250ms;
+    cursor: pointer;
 }
 
 .solved-row {
+    border-radius: 12px;
+    background-color: #9bc4ff;
+    width: 100%;
+    height: 75px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    box-shadow: 3px 3px 4px 0px #00000075;
+    justify-content: center;
+    cursor: default;
     grid-column-end: span 4;
     flex-direction: column;
     line-height: 19px;
@@ -82,8 +92,6 @@ body {
 
 .selected-item {
     background-color: #d3e5ff;
-    box-sizing: border-box;
-    border: 5px solid #9bc4ff;
 }
 
 .logo-bar {
@@ -112,10 +120,12 @@ body {
 .button {
     background-color: #d5d5d5;
     border-radius: 5px;
-    margin: auto;
+    margin: 0px 25px;
     width: 60px;
     height: 30px;
+    padding: 5px 15px;
     text-align: center;
     line-height: 30px;
     box-shadow: 3px 3px 4px 0px #00000075;
+    cursor: pointer;
 }
