Win and lose dialog boxes

--- a/fun/13/connections.css
+++ b/fun/13/connections.css
@@ -194,7 +194,7 @@ body {
     margin: 3px;
 }
 
-#instructions {
+.dialog {
     font-family: 'Heebo', sans-serif;
     position: fixed;
     z-index: 1;
